# simple-type-checker

./: .gitignore  LICENSE  README.md  SimpleTypeChecker.cabal  package.yaml  project.cabal  simple-type-checker.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/SimpleTypeChecker/: AppMain.hs  IO.hs  Parser.hs  TypeChecker.hs  Types.hs
tests/: Main.hs  TestSuite.hs
tests/SimpleTypeChecker/IO/: Tests.hs
tests/SimpleTypeChecker/TypeChecker/: Tests.hs
tests/SimpleTypeChecker/Types/: TestBindings.hs
