Name:                SimpleTypeChecker
Description:         A type checker for simply typed lambda calculus
Version:             0.1.0.0
Author:              SmnTin
Maintainer:          smn.pankv@gmail.com
Stability:           Experimental
License:             MIT
Copyright:           AllRightReserved
Build-type:          Simple
Cabal-version:       >=1.10

Executable simple-type-checker
    main-is:           Main.hs
    hs-source-dirs:    src
    default-language:  Haskell2010
    other-modules:     SimpleTypeChecker.IO, SimpleTypeChecker.Parser, SimpleTypeChecker.TypeChecker, SimpleTypeChecker.Types

    Build-depends:
        base                      >= 4       && < 5,
        mtl                       >= 2       && < 3