Name:                SimpleTypeChecker
Description:         A type checker for simply typed lambda calculus
Version:             0.1.0.0
Author:              SmnTin
Maintainer:          smn.pankv@gmail.com
Stability:           Experimental
License:             MIT
Copyright:           AllRightReserved
Build-type:          Simple
Cabal-version:       >=1.10

Library simple-type-checker-lib
  exposed-modules:
      SimpleTypeChecker.IO
    , SimpleTypeChecker.Parser
    , SimpleTypeChecker.TypeChecker
    , SimpleTypeChecker.Types
  hs-source-dirs:
      src
  build-depends:
      base                      >=4       && <5
    , mtl                       >=2       && <3
  default-language: Haskell2010

Executable simple-type-checker
  main-is:           Main.hs
  hs-source-dirs:    src
  default-language:  Haskell2010

  Build-depends:
      base                      >=4       && <5
    , simple-type-checker-lib

Test-suite test-simple-type-checker
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: tests
  default-language: Haskell2010

  build-depends:
      base                       >=4         && <5
    , mtl                        >=2         && <3
    , tasty                      >= 1.4
    , tasty-hunit                >= 0.10
    , simple-type-checker-lib

  other-modules:
      SimpleTypeChecker.IO.Tests


source-repository head
  type:     git
  location: git://github.com/SmnTin/simple-type-checker.git